--- a/compass.desktop.in
+++ b/compass.desktop.in
@@ -1,8 +1,8 @@
 [Desktop Entry]
 Name=@APP_NAME@
-_Comment=Sonos music
-Exec=@EXEC@
+Exec=bin/compass-gui
 Icon=@APP_NAME@
 Terminal=false
 Type=Application
-Categories=AudioVideo;Audio;
+X-Ubuntu-Touch=true
+X-Ubuntu-Supported-Orientations=portrait
