--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,8 @@ set(APP_VERSION       "0.1.0")
 set(APP_VERSION_CODE  1)
 set(APP_NAME          "compass")
 set(APP_ID            "io.github.janbar.compass")
-set(EXEC              "compass")
-set(ICON_FILE         "compass.png")
+set(EXEC              "bin/compass-gui")
+set(ICON_FILE         "compass.svg")
 set(MANIFEST_FILE     "manifest.json")
 set(APPARMOR_FILE     "compass.apparmor")
 set(DESKTOP_FILE_NAME "compass.desktop")
