--- a/manifest.json.in
+++ b/manifest.json.in
@@ -9,7 +9,7 @@
             "desktop":  "compass.desktop"
         }
     },
-    "version": "1.0.0",
-    "maintainer": "Your FullName <email@domain.org>",
-    "framework" : "ubuntu-sdk-16.04"
+    "version": "1.0.1",
+    "maintainer": "Lionel Duboeuf <lduboeuf@ouvaton.org>",
+    "framework" : "@CLICK_FRAMEWORK@"
 }
